--- a/MaterialDesignSkin.csproj
+++ b/MaterialDesignSkin.csproj
@@ -36,8 +36,8 @@
     <Reference Include="MaterialDesignColors, Version=1.1.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialDesignColors.1.1.3\lib\net45\MaterialDesignColors.dll</HintPath>
     </Reference>
-    <Reference Include="MaterialDesignThemes.Wpf, Version=2.4.1.1101, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\Client_Module\packages\MaterialDesignThemes.2.4.1.1101\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
+    <Reference Include="MaterialDesignThemes.Wpf, Version=2.5.0.1205, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\Client_Module\packages\MaterialDesignThemes.2.5.0.1205\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
@@ -68,6 +68,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\LoginControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ShopView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -117,8 +121,13 @@
     <Compile Include="Controls\ExtendedRichTextbox.cs" />
     <Compile Include="Converters\AppExePopupConverter.cs" />
     <Compile Include="Modules\Settings\UserSettingsHardwareModule.cs" />
+    <Compile Include="Modules\ShopSectionModule.cs" />
     <Compile Include="Source\NewsTemplateSelector.cs" />
+    <Compile Include="Source\SettingsHelper.cs" />
     <Compile Include="Source\ShadowHelper.cs" />
+    <Compile Include="Views\ShopView.xaml.cs">
+      <DependentUpon>ShopView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\UserPasswordEditView.xaml.cs">
       <DependentUpon>UserPasswordEditView.xaml</DependentUpon>
     </Compile>
@@ -141,7 +150,7 @@
     <Compile Include="Modules\AppSectionModule.cs" />
     <Compile Include="Modules\HomeSectionModule.cs" />
     <Compile Include="Modules\Settings\UserSettingsAccountModule.cs" />
-    <Compile Include="Panels\VirtualizingWrapPanel.cs" />
+    <Compile Include="Controls\VirtualizingWrapPanel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
