--- a/MaterialDesignSkin.csproj
+++ b/MaterialDesignSkin.csproj
@@ -33,11 +33,11 @@
     <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MaterialDesignColors, Version=1.1.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\Client_Module\packages\MaterialDesignColors.1.1.3\lib\net45\MaterialDesignColors.dll</HintPath>
+    <Reference Include="MaterialDesignColors, Version=1.2.0.325, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\Client_Module\packages\MaterialDesignColors.1.2.0\lib\net45\MaterialDesignColors.dll</HintPath>
     </Reference>
-    <Reference Include="MaterialDesignThemes.Wpf, Version=2.5.1.1345, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\Client_Module\packages\MaterialDesignThemes.2.5.1\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
+    <Reference Include="MaterialDesignThemes.Wpf, Version=2.6.0.325, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\Client_Module\packages\MaterialDesignThemes.2.6.0\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
@@ -251,9 +251,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)$(TargetFileName)" "D:\My Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\$(TargetFileName)" /y
-copy "MaterialDesignColors.dll" "D:\My Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\MaterialDesignColors.dll" /y
-copy "MaterialDesignThemes.Wpf.dll" "D:\My Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\MaterialDesignThemes.Wpf.dll" /y
+    <PostBuildEvent>copy "$(TargetDir)$(TargetFileName)" "C:\Users\Dabuzz\Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\$(TargetFileName)" /y
+copy "MaterialDesignColors.dll" "C:\Users\Dabuzz\Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\MaterialDesignColors.dll" /y
+copy "MaterialDesignThemes.Wpf.dll" "C:\Users\Dabuzz\Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\MaterialDesignThemes.Wpf.dll" /y
 </PostBuildEvent>
   </PropertyGroup>
 </Project>
