--- a/MaterialDesignSkin.csproj
+++ b/MaterialDesignSkin.csproj
@@ -12,6 +12,8 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,11 +35,11 @@
     <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MaterialDesignColors, Version=1.2.0.325, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\Client_Module\packages\MaterialDesignColors.1.2.0\lib\net45\MaterialDesignColors.dll</HintPath>
+    <Reference Include="MaterialDesignColors, Version=1.1.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\Client_Module\packages\MaterialDesignColors.1.1.3\lib\net45\MaterialDesignColors.dll</HintPath>
     </Reference>
-    <Reference Include="MaterialDesignThemes.Wpf, Version=2.6.0.325, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\Client_Module\packages\MaterialDesignThemes.2.6.0\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
+    <Reference Include="MaterialDesignThemes.Wpf, Version=2.5.1.1345, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\Client_Module\packages\MaterialDesignThemes.2.5.1\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
@@ -155,6 +157,7 @@
     <Compile Include="Converters\ImageSourceToBitmapConverter.cs" />
     <Compile Include="Modules\Settings\UserSettingsHardwareModule.cs" />
     <Compile Include="Modules\ShopSectionModule.cs" />
+    <Compile Include="Source\ControlsHelper.cs" />
     <Compile Include="Source\NewsTemplateSelector.cs" />
     <Compile Include="Source\SettingsHelper.cs" />
     <Compile Include="Source\ShadowHelper.cs" />
@@ -260,9 +263,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)$(TargetFileName)" "C:\Users\Dabuzz\Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\$(TargetFileName)" /y
-copy "MaterialDesignColors.dll" "C:\Users\Dabuzz\Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\MaterialDesignColors.dll" /y
-copy "MaterialDesignThemes.Wpf.dll" "C:\Users\Dabuzz\Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\MaterialDesignThemes.Wpf.dll" /y
+    <PostBuildEvent>copy "$(TargetDir)$(TargetFileName)" "C:\Users\DaBuzz\Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\$(TargetFileName)" /y
+copy "MaterialDesignColors.dll" "C:\Users\DaBuzz\Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\MaterialDesignColors.dll" /y
+copy "MaterialDesignThemes.Wpf.dll" "C:\Users\DaBuzz\Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\MaterialDesignThemes.Wpf.dll" /y
 </PostBuildEvent>
   </PropertyGroup>
 </Project>
