--- a/MaterialDesignSkin.csproj
+++ b/MaterialDesignSkin.csproj
@@ -1,271 +1,57 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BB6388CF-89D3-40F6-91AB-CAD01F4DDDC9}</ProjectGuid>
-    <OutputType>library</OutputType>
-    <RootNamespace>MaterialDesignSkin</RootNamespace>
-    <AssemblyName>MaterialDesignSkin</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <WarningLevel>4</WarningLevel>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="MaterialDesignColors, Version=1.1.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\Client_Module\packages\MaterialDesignColors.1.1.3\lib\net45\MaterialDesignColors.dll</HintPath>
-    </Reference>
-    <Reference Include="MaterialDesignThemes.Wpf, Version=2.5.1.1345, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\Client_Module\packages\MaterialDesignThemes.2.5.1\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xaml">
-      <RequiredTargetFramework>4.0</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="WindowsBase" />
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="Views\AcceptDialogView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\AcceptDialogViewEx.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\AppDetailView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\LoginControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Registration\RegisterCompleteView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Registration\RegisterFailureView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Registration\RegisterProfileView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Registration\RegisterConfirmationView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Registration\RegisterView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Registration\RegsiterAgreementView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Reservation\ReservationScreenView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\ShopView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\UserPasswordEditView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\UserProfileEditView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\UserSettingsView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Properties\DesignTimeResources.xaml" Condition="'$(DesignTime)'=='true' OR ('$(SolutionPath)'!='' AND Exists('$(SolutionPath)') AND '$(BuildingInsideVisualStudio)'!='true' AND '$(BuildingInsideExpressionBlend)'!='true')">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-      <ContainsDesignTimeResources>true</ContainsDesignTimeResources>
-    </Page>
-    <Page Include="Themes\Generic.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\AppView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\HomeView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Resources\Resources.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\UserSettingsAccountView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Controls\ExtendedRichTextbox.cs" />
-    <Compile Include="Converters\AppExePopupConverter.cs" />
-    <Compile Include="Converters\ImageSourceToBitmapConverter.cs" />
-    <Compile Include="Modules\Settings\UserSettingsHardwareModule.cs" />
-    <Compile Include="Modules\ShopSectionModule.cs" />
-    <Compile Include="Source\ControlsHelper.cs" />
-    <Compile Include="Source\NewsTemplateSelector.cs" />
-    <Compile Include="Source\SettingsHelper.cs" />
-    <Compile Include="Source\ShadowHelper.cs" />
-    <Compile Include="ViewModels\MessageDialogViewModel.cs" />
-    <Compile Include="Views\AcceptDialogViewEx.xaml.cs">
-      <DependentUpon>AcceptDialogViewEx.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Registration\RegisterCompleteView.xaml.cs">
-      <DependentUpon>RegisterCompleteView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Registration\RegisterFailureView.xaml.cs">
-      <DependentUpon>RegisterFailureView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Registration\RegisterProfileView.xaml.cs">
-      <DependentUpon>RegisterProfileView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Registration\RegisterConfirmationView.xaml.cs">
-      <DependentUpon>RegisterConfirmationView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Registration\RegisterView.xaml.cs">
-      <DependentUpon>RegisterView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Registration\RegsiterAgreementView.xaml.cs">
-      <DependentUpon>RegsiterAgreementView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Reservation\ReservationScreenView.xaml.cs">
-      <DependentUpon>ReservationScreenView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\ShopView.xaml.cs">
-      <DependentUpon>ShopView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\UserPasswordEditView.xaml.cs">
-      <DependentUpon>UserPasswordEditView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\UserProfileEditView.xaml.cs">
-      <DependentUpon>UserProfileEditView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\UserSettingsView.xaml.cs">
-      <DependentUpon>UserSettingsView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Modules\BootStrapper.cs" />
-    <Compile Include="Views\AcceptDialogView.xaml.cs">
-      <DependentUpon>AcceptDialogView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\AppDetailView.xaml.cs">
-      <DependentUpon>AppDetailView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\LoginControl.xaml.cs">
-      <DependentUpon>LoginControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Modules\AppSectionModule.cs" />
-    <Compile Include="Modules\HomeSectionModule.cs" />
-    <Compile Include="Modules\Settings\UserSettingsAccountModule.cs" />
-    <Compile Include="Controls\VirtualizingWrapPanel.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <Compile Include="Source\DelayedMultiBindingExtension .cs" />
-    <Compile Include="Views\AppView.xaml.cs">
-      <DependentUpon>AppView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\HomeView.xaml.cs">
-      <DependentUpon>HomeView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\UserSettingsAccountView.xaml.cs">
-      <DependentUpon>UserSettingsAccountView.xaml</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <None Include="app.config" />
-    <None Include="packages.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Gizmo\DataInterfaces\DataInterfaces\DataInterfaces.csproj">
-      <Project>{d1699cd0-ec5d-4bac-af4e-a145e417733b}</Project>
-      <Name>DataInterfaces</Name>
-      <Private>False</Private>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <Resource Include="Resources\Images\BACKGROUND_DESKTOP.jpg" />
-    <Resource Include="Resources\Images\BACKGROUND_LOGIN.jpg" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)$(TargetFileName)" "C:\Users\DaBuzz\Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\$(TargetFileName)" /y
-copy "MaterialDesignColors.dll" "C:\Users\DaBuzz\Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\MaterialDesignColors.dll" /y
-copy "MaterialDesignThemes.Wpf.dll" "C:\Users\DaBuzz\Documents\Visual Studio 2015\Projects\Gizmo\GizmoService\GizmoService\bin\Debug\Skins\Material\MaterialDesignThemes.Wpf.dll" /y
-</PostBuildEvent>
-  </PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+
+	<PropertyGroup>
+		<LangVersion>latest</LangVersion>
+		<Product>MaterialDesignSkin</Product>
+		<Description></Description>
+		<Copyright>Copyright © 2020</Copyright>
+		<Authors />
+		<Company>NETProjects</Company>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<UseWPF>true</UseWPF>
+		<NoWarn>1591</NoWarn>
+		<Configurations>Debug;Release;Core Port</Configurations>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)'=='Core Port'">
+		<TargetFrameworks>net461;netcoreapp3.1</TargetFrameworks>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)'!='Core Port'">
+		<TargetFrameworks>net461</TargetFrameworks>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+	</PropertyGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)'=='net461'">
+		<Reference Include="System.ComponentModel.Composition" />
+		<Reference Include="System.Windows.Forms" />
+		<PackageReference Include="MaterialDesignColors" Version="1.1.3" />
+		<PackageReference Include="MaterialDesignThemes" Version="2.5.1" />
+	</ItemGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net461|AnyCPU'">
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+	</PropertyGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
+		<PackageReference Include="MaterialDesignColors" Version="1.2.2" />
+		<PackageReference Include="MaterialDesignThemes" Version="3.0.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="Resources\Images\BACKGROUND_DESKTOP.jpg" />
+	  <None Remove="Resources\Images\BACKGROUND_LOGIN.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Resource Include="Resources\Images\BACKGROUND_DESKTOP.jpg" />
+	  <Resource Include="Resources\Images\BACKGROUND_LOGIN.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\DataInterfaces\DataInterfaces\DataInterfaces.csproj" />
+	</ItemGroup>
+
 </Project>
