--- a/MaterialDesignSkin.csproj
+++ b/MaterialDesignSkin.csproj
@@ -9,17 +9,23 @@
 		<Company>NETProjects</Company>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<UseWPF>true</UseWPF>
+		<UseWindowsForms>true</UseWindowsForms>
 		<NoWarn>1591</NoWarn>
 		<Configurations>Debug;Release;Core Port</Configurations>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)'=='Core Port'">
-		<TargetFrameworks>net461;netcoreapp3.1</TargetFrameworks>
+		<TargetFrameworks>netcoreapp3.1</TargetFrameworks>		
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)'!='Core Port'">
 		<TargetFrameworks>net461</TargetFrameworks>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net461|AnyCPU'">
+		<PlatformTarget>AnyCPU</PlatformTarget>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	</PropertyGroup>
 
@@ -30,14 +36,10 @@
 		<PackageReference Include="MaterialDesignThemes" Version="2.5.1" />
 	</ItemGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net461|AnyCPU'">
-		<PlatformTarget>AnyCPU</PlatformTarget>
-		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-	</PropertyGroup>
-
 	<ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
-		<PackageReference Include="MaterialDesignColors" Version="1.2.2" />
-		<PackageReference Include="MaterialDesignThemes" Version="3.0.1" />
+		<Reference Include="System.ComponentModel.Composition" />
+		<PackageReference Include="MaterialDesignColors" Version="1.2.6" />
+		<PackageReference Include="MaterialDesignThemes" Version="3.1.3" />
 	</ItemGroup>
 
 	<ItemGroup>
