--- a/MaterialDesignSkin.csproj
+++ b/MaterialDesignSkin.csproj
@@ -3,30 +3,22 @@
 	<PropertyGroup>
 		<LangVersion>latest</LangVersion>
 		<Product>MaterialDesignSkin</Product>
-		<Description></Description>
 		<Copyright>Copyright © 2020</Copyright>
-		<Authors />
 		<Company>NETProjects</Company>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<UseWPF>true</UseWPF>
 		<UseWindowsForms>true</UseWindowsForms>
 		<NoWarn>1591</NoWarn>
-		<Configurations>Debug;Release;Core Port</Configurations>
-		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)'=='Core Port'">
-		<TargetFrameworks>netcoreapp3.1</TargetFrameworks>		
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)'!='Core Port'">
+		<Configurations>Debug;Release;</Configurations>
+		<PlatformTarget>AnyCPU</PlatformTarget>
 		<TargetFrameworks>net461</TargetFrameworks>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net461|AnyCPU'">
-		<PlatformTarget>AnyCPU</PlatformTarget>
-		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<Optimize>true</Optimize>
+	</PropertyGroup>	
+	
+	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
+		<Optimize>false</Optimize>
+		<DefineConstants>DEBUG;TRACE</DefineConstants>
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)'=='net461'">
@@ -36,20 +28,14 @@
 		<PackageReference Include="MaterialDesignThemes" Version="2.5.1" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
-		<Reference Include="System.ComponentModel.Composition" />
-		<PackageReference Include="MaterialDesignColors" Version="1.2.6" />
-		<PackageReference Include="MaterialDesignThemes" Version="3.1.3" />
+	<ItemGroup>
+		<None Remove="Resources\Images\BACKGROUND_DESKTOP.jpg" />
+		<None Remove="Resources\Images\BACKGROUND_LOGIN.jpg" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Remove="Resources\Images\BACKGROUND_DESKTOP.jpg" />
-	  <None Remove="Resources\Images\BACKGROUND_LOGIN.jpg" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Resource Include="Resources\Images\BACKGROUND_DESKTOP.jpg" />
-	  <Resource Include="Resources\Images\BACKGROUND_LOGIN.jpg" />
+		<Resource Include="Resources\Images\BACKGROUND_DESKTOP.jpg" />
+		<Resource Include="Resources\Images\BACKGROUND_LOGIN.jpg" />
 	</ItemGroup>
 
 	<ItemGroup>
