--- a/MaterialDesignSkin.csproj
+++ b/MaterialDesignSkin.csproj
@@ -14,6 +14,7 @@
 		<TargetFrameworks>net461</TargetFrameworks>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<Optimize>true</Optimize>
+		<Version>1.0.0.1</Version>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
